Updates from Overleaf

--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -17,7 +17,7 @@ The second type of neutrino to be discovered was the muon neutrino by the Altern
 
 Following the discovery of the tau lepton in 1975 by the SLAC National Accelerator Laboratory, the tau neutrino was predicted in order to mirror the structure of the electron and muon lepton both of which have an associated neutrino \cite{tau_lepton_discovery}. The existence of the tau neutrino was eventually confirmed by the \Gls{donut} experiment in 2000. The \Gls{donut} experiment used a neutrino beam created from the decay of charmed mesons produced by protons from the  Tevatron accelerator at \gls{fermilab}. Most of the tau neutrinos were produced from the decay of the $D_s$ meson and the decay from the resulting tau lepton \cite{DONUT}.
 
-The three confirmed flavours of neutrinos ($\nu_e, \nu_{\mu}, \nu_{\tau}$) are consistent with predictions from the \Gls{sm}. The number of expected neutrinos may be determined from the decay of the Z-boson since it's lifetime is dependent on the number of flavours. This was shown by the \gls{lep} experiment, which found the lifetime of the Z-boson to be consistent with a three neutrino model \cite{Zboson_number_of_neutrinos}\cite{LEP}. There have, however, been results from experiments which are inconsistent with the 3 neutrino framework. Namely the excess of events observed by the \gls{lsnd} and \gls{miniboone} experiments, the deficit of events observed by the \gls{sage} and \gls{gallex} detectors (dubbed the \textit{Gallium Anomaly}) and the deficit of events observed from nuclear reactors (dubbed the \textit{Reactor Anomaly}) \cite{LSND_excess} \cite{MiniBooNE_excess} \cite{GALLEX} \cite{Gallex_reanalysis} \cite{SAGE} \cite{Reactor_anomaly}. Additional neutrino flavours may exist and not contradict the statement on the lifetime of the Z-boson if they have a mass greater than half that of the Z-boson and/or they do not weakly interact and hence do not contribute to the decay rate of the Z-boson \cite{Zboson_number_of_neutrinos}. The hypothetical neutrinos which do not weakly interact are know as \textit{sterile} neutrinos in order to distinguish them from the \textit{active} ones that do. Sterile neutrinos will be discussed in greater detail in \SectionRef{subchap:Motivation for Sterile Neutrinos} and \SectionRef{subchap:Theory of Sterile Neutrinos}.
+The three confirmed flavours of neutrinos ($\nu_e, \nu_{\mu}, \nu_{\tau}$) are consistent with predictions from the \Gls{sm}. The number of expected neutrinos may be determined from the decay of the Z boson since its lifetime is dependent on the number of flavours. This was shown by the \gls{lep} experiment, which found the lifetime of the Z boson to be consistent with a three neutrino model \cite{Zboson_number_of_neutrinos}\cite{LEP}. There have, however, been results from experiments which are inconsistent with the 3 neutrino framework. Namely the excess of events observed by the \gls{lsnd} and \gls{miniboone} experiments, the deficit of events observed by the \gls{sage} and \gls{gallex} detectors (dubbed the \textit{Gallium Anomaly}) and the deficit of events observed from nuclear reactors (dubbed the \textit{Reactor Anomaly}) \cite{LSND_excess} \cite{MiniBooNE_excess} \cite{GALLEX} \cite{Gallex_reanalysis} \cite{SAGE} \cite{Reactor_anomaly}. Additional neutrino flavours may exist and not contradict the statement on the lifetime of the Z boson if they have a mass greater than half that of the Z boson and/or they do not weakly interact and hence do not contribute to the decay rate of the Z boson \cite{Zboson_number_of_neutrinos}. The hypothetical neutrinos which do not weakly interact are know as \textit{sterile} neutrinos in order to distinguish them from the \textit{active} ones that do. Sterile neutrinos will be discussed in greater detail in \SectionRef{subchap:Motivation for Sterile Neutrinos} and \SectionRef{subchap:Theory of Sterile Neutrinos}.
 
 \section{Overview of Neutrino Physics}\label{sec:neutrino_physics}
 
@@ -146,7 +146,7 @@ It should be noted that for massless particles, helicity is Lorentz invariant an
 
 The weak force is mediated by the charged $W^\pm$ and neutral $Z^0$ bosons. It is dubbed \textit{weak} because if the strong or \gls{em} forces are also present the weak force is usually subdominant. The active neutrinos only interact via the weak force (and gravity) which is one of the reasons they have been historically difficult to detect. 
 
-The weak force has two associated types of interaction: \gls{cc} interactions which are mediated by the charged \textit{W} boson and \gls{nc} interactions which are mediated by the neutral \textit{Z} boson. The defining difference is that for \gls{cc} interactions current flows between the interacting fermions (i.e. charge is exchanged), whereas for \gls{nc} interactions, the total flow of charge between the interacting fermions is zero. The weak component of the \gls{sm} Lagrangian is therefore comprised of two terms, one representing \gls{cc} and one representing \gls{nc}. The \gls{cc} current, $j^{CC}_{weak}$,  and \gls{nc} current, $j^{NC}_{weak}$, components of each of these terms may be expressed as, 
+The weak force has two associated types of interaction: \gls{cc} interactions which are mediated by the charged W boson and \gls{nc} interactions which are mediated by the neutral Z boson. The defining difference is that for \gls{cc} interactions current flows between the interacting fermions (i.e. charge is exchanged), whereas for \gls{nc} interactions, the total flow of charge between the interacting fermions is zero. The weak component of the \gls{sm} Lagrangian is therefore comprised of two terms, one representing \gls{cc} and one representing \gls{nc}. The \gls{cc} current, $j^{CC}_{weak}$,  and \gls{nc} current, $j^{NC}_{weak}$, components of each of these terms may be expressed as, 
 \begin{equation}\label{eqn:weak current}
 \begin{split}
     j^{CC}_{weak} &= \frac{g}{\sqrt{2}}\overline{\psi}\gamma^{\mu}P_L\psi, \\
@@ -161,7 +161,7 @@ where $g$ is the weak coupling factor, $\theta_W$ is the Weinberg angle, $g_V$ i
     \frac{g^2}{8m^2_Z\cos^2{\theta_W}} &= \frac{G_F}{\sqrt{2}},
 \end{split}
 \end{equation}
-where $m_W$ is the mass of the \textit{W} boson and $m_Z$ is the mass of the \textit{Z} boson \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}.
+where $m_W$ is the mass of the W boson and $m_Z$ is the mass of the Z boson \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}.
 
 It was shown experimentally by Wu that \gls{p} conservation is violated and later by Cronin and Fitch that \gls{cp} conservation is also violated \cite{Wu_experiment}\cite{Cronin_and_Fitch_experiment}. \gls{cp} violation is one of the Sakharov conditions required to have a matter-antimatter asymmetry in the universe, however, the amount of \gls{cp} violation seen in the quark sector is seemingly insufficient to explain the matter dominated universe that is  observed \cite{Sakharov_conditions}. There may also be \gls{cp} violation from the \gls{pmns} matrix in the lepton sector which could help explain the matter-antimatter asymmetry. However, the amount of \gls{cp} violation in the lepton sector, if any, is currently unknown \cite{leptonic_cp_violation}.  
 
@@ -172,7 +172,7 @@ $j^{CC}_{weak}$ has the form of a vector-axial (V--A) interaction, where the vec
 Because the projection operator, $P_L$, appears in \EquationRef{eqn:weak current} it follows that weak interactions only apply to left-handed particles (and right-handed antiparticles).
 \end{comment}
 
-The \gls{sm} is constructed such that only the left components of the field couple to the \textit{W} and \textit{Z} bosons so it follows that only left-handed particles (and right-handed anti-particles) can weakly interact. Neutrinos only interact via the weak force which means they are therefore produced with a left-handed chirality and since they are ultra-relativistic, for all intents and purposes they also have a left-handed helicity. Additionally, a neutrino that is present in a weak interaction is always in a definite flavour state which corresponds to the associated charged lepton (therefore conserving lepton number) \cite{Quarks_and_Leptons:_An_Introductor_Course_in_Modern_Particle_Physics_book}. 
+The \gls{sm} is constructed such that only the left components of the field couple to the W and Z bosons so it follows that only left-handed particles (and right-handed anti-particles) can weakly interact. Neutrinos only interact via the weak force which means they are therefore produced with a left-handed chirality and since they are ultra-relativistic, for all intents and purposes they also have a left-handed helicity. Additionally, a neutrino that is present in a weak interaction is always in a definite flavour state which corresponds to the associated charged lepton (therefore conserving lepton number) \cite{Quarks_and_Leptons:_An_Introductor_Course_in_Modern_Particle_Physics_book}. 
 
 \subsection{Neutrino Oscillations}\label{subsec:Neutrino Oscillations}
 Another unique property of neutrinos are their ability to oscillate. That is, the neutrino flavour may change as it propagates. This phenomenon was first proposed by Pontecorvo in 1957 \cite{Pontecorvo}. In the following years this work was built upon by Maki, Nakagawa, Sakata and Pontecorvo himself \cite{MNS_oscillations}. 
