--- a/chap3-SBN_Program.tex
+++ b/chap3-SBN_Program.tex
@@ -39,7 +39,7 @@ The general design of a single chamber \gls{lartpc} is shown in \FigureRef{fig:l
     \label{fig:lartpc}
 \end{figure}
 
-Along with the global volume of a detector which is defined by it's dimensions, there are usually two other volumes associated with \glspl{lartpc}; the \textit{active} volume and the \textit{fiducial} volume. The active volume is defined as the volume which is enclosed within the \gls{tpc} and is the volume of the detector which allows for event detection. The fiducial volume is not directly defined by the physical design of the detector, but is instead the region within the active volume where event reconstruction is thought to be well understood. Events occurring right at the edge of the \gls{tpc} may be difficult to reconstruct and are therefore poorly understood. Additionally, background events tend to occur close to the edge of the \gls{tpc}, so by only considering events within the fiducial volume, the percentage of well understood signal events is maximised \cite{PDG_2022}. The active and fiducial volumes used in each of the \gls{sbn} detectors is defined in \AppendixRef{app:Detector_Volumes}.
+Along with the global volume of a detector which is defined by its dimensions, there are usually two other volumes associated with \glspl{lartpc}; the \textit{active} volume and the \textit{fiducial} volume. The active volume is defined as the volume which is enclosed within the \gls{tpc} and is the volume of the detector which allows for event detection. The fiducial volume is not directly defined by the physical design of the detector, but is instead the region within the active volume where event reconstruction is thought to be well understood. Events occurring right at the edge of the \gls{tpc} may be difficult to reconstruct and are therefore poorly understood. Additionally, background events tend to occur close to the edge of the \gls{tpc}, so by only considering events within the fiducial volume, the percentage of well understood signal events is maximised \cite{PDG_2022}. The active and fiducial volumes used in each of the \gls{sbn} detectors is defined in \AppendixRef{app:Detector_Volumes}.
 
 \subsection{Detector effects}
 
@@ -78,7 +78,7 @@ where $Q$ is the charge remaining after correcting for electron lifetime, $Q_0$ 
 \subsubsection{Recombination}
 When argon atoms are ionised, the resulting ionised electron may immediately recombine with a nearby argon ion instead of being separated by the electric field in the detector. This is known as the recombination effect and the magnitude of the effect is largely determined by the local electric field. A number of different approaches to model the recombination effect exist, however, for liquid argon detectors a form of the box model or Jaff\'{e} model are usually used \cite{LArTPC_book}.
 
-The Jaff\'{e} model is based on the idea that recombination depends on the charge density of both nearby electrons and ions. The model assumes a cylinder surrounding the ionisation track and recombination may occur between any of the ionised electrons and ions, not just the electron with it's associated parent ion which is were the Jaff\'{e} model largely differs from earlier models \cite{Jaffe_model}. The recombination effect from the Jaff\'{e} model is given by 
+The Jaff\'{e} model is based on the idea that recombination depends on the charge density of both nearby electrons and ions. The model assumes a cylinder surrounding the ionisation track and recombination may occur between any of the ionised electrons and ions, not just the electron with its associated parent ion which is were the Jaff\'{e} model largely differs from earlier models \cite{Jaffe_model}. The recombination effect from the Jaff\'{e} model is given by 
 \begin{equation}\label{Jaffe}
     Q = \frac{Q_{0}}{1+q_{0}F(E\sin{\phi})},
 \end{equation}
@@ -172,7 +172,7 @@ $\numubar$  & 5.86                & 83.73                    \\
 $\nue$          & 0.52                & 0.2                      \\
 $\nuebar$    & 0.05                & 0.4                     
 \end{tabular}
-\caption[BNB flavour composition.]{The neutrino flavour composition of the \gls{bnb} when it's running in either neutrino or anti-neutrino mode \cite{BNB_flux}.}
+\caption[BNB flavour composition.]{The neutrino flavour composition of the \gls{bnb} when it is running in either neutrino or anti-neutrino mode \cite{BNB_flux}.}
 \label{Table: BNB composition}
 \end{table}
 
@@ -190,12 +190,12 @@ The systematic uncertainties associated with the \gls{bnb} account for an error 
 The following section outlines some of the most common \gls{cc} and \gls{nc} interaction processes in \gls{sbn}. The associated \gls{cc} and \gls{nc} Feynman diagrams for these processes are shown in \FigureRef{fig:CC_Feynman_diagrams} and \FigureRef{fig:NC_Feynman_diagrams} respectively (the possible \gls{2p2h} interactions are shown separately in \FigureRef{fig:mec_feynman_diagrams}). Only examples of neutrino interactions are shown, however, these may be easily adapted to the anti-neutrino case. Additionally, interaction flavours are kept general with \textit{l} representing the lepton flavour. In principle $l \in \{e, \mu, \tau\}$, however, within \gls{sbn} only the electron and muon flavours are relevant. 
 
 \subsection*{Elastic and Quasi-Elastic}
-When particles interact via elastic scattering, the initial particles do not change. Since neutrinos are neutral particles that weakly interact, \gls{nc} elastic scattering being mediated by the $Z^0$ boson may occur with a neutrino scattering off a proton via
+When particles interact via elastic scattering, the initial particles do not change. Since neutrinos are neutral particles that weakly interact, \gls{nc} elastic scattering being mediated by the Z$^0$ boson may occur with a neutrino scattering off a proton via
 \begin{equation}
     \nu_l + p \rightarrow \nu_l + p.
 \end{equation}
 
-Quasi-elastic scattering is similar to elastic scattering, however charge is exchanged and therefore the interaction is mediated by the $W^+$ boson. \gls{ccqe} interactions are defined by the production of a charged lepton plus a (semi-) stable baryon. The dominant form of these interactions occur when the incoming neutrino scatters off a neutron and is converted to its charged lepton counterpart whilst the neutron changes to a proton via
+Quasi-elastic scattering is similar to elastic scattering, however charge is exchanged and therefore the interaction is mediated by the W$^+$ boson. \gls{ccqe} interactions are defined by the production of a charged lepton plus a (semi-) stable baryon. The dominant form of these interactions occur when the incoming neutrino scatters off a neutron and is converted to its charged lepton counterpart whilst the neutron changes to a proton via
 \begin{equation}
     \nu_l + n \rightarrow l^- + p.
 \end{equation}
@@ -213,7 +213,7 @@ whereas \gls{nc} interactions occur via,
 In both cases, \textit{N} represent some nucleon with $\Delta$ and $\pi$ being one of the possible Delta resonances and pions appropriate for a given interaction \cite{Measurement_of_the_Antineutrino_Double-Differential_Charged-Current_Quasi-Elastic_Scattering_Cross_Section_at_MINERvA_book} \cite{Measurement_of_the_Water_to_Scintillator_Charged-Current_Cross-Section_Ratio_for_Muon_Neutrinos_at_the_T2K_Near_Detector_thesis}. 
 
 \subsection*{2 Particles 2 Holes}
-Within the nuclear environment, there is a correlation between the distribution of nucleons. Therefore, some of the nucleons are bounded in pairs and these bound nucleon pairs may be thought of as being bound due to the exchange of virtual mesons.\footnote{This exchange of mesons is sometimes also known as a \gls{mec}. \glspl{mec} are a subset of \gls{2p2h} interaction where the \textit{W} boson couples directly to the exchanged meson, however, these terms are sometimes used interchangeably.} In this type of interaction, multiple nucleons are excited in a quasi-elastic fashion. The boson may couple to either a nucleon or the meson that's being exchanged. This leads to a number of possibilities such as; 1) the boson couples to the exchanged meson (pion-in-flight diagram), 2) the boson couples at the vertex between the nucleon and exchanged meson (seagull diagram), 3) the meson exchange occurs with a virtual intermediate nucleon to which the boson couples, 4) as in case 3), but the intermediate particle is a Delta resonance instead of a nucleon. Feynman diagrams of these 4 possibilities are shown in \FigureRef{fig:mec_feynman_diagrams} \cite{Measurement_of_the_Antineutrino_Double-Differential_Charged-Current_Quasi-Elastic_Scattering_Cross_Section_at_MINERvA_book}\cite{Adjusting_neutrino_interaction_models_and_evaluating_uncertainties_using_NOvA_near_detector_data}
+Within the nuclear environment, there is a correlation between the distribution of nucleons. Therefore, some of the nucleons are bounded in pairs and these bound nucleon pairs may be thought of as being bound due to the exchange of virtual mesons.\footnote{This exchange of mesons is sometimes also known as a \gls{mec}. \glspl{mec} are a subset of \gls{2p2h} interaction where the W boson couples directly to the exchanged meson, however, these terms are sometimes used interchangeably.} In this type of interaction, multiple nucleons are excited in a quasi-elastic fashion. The boson may couple to either a nucleon or the meson that's being exchanged. This leads to a number of possibilities such as; 1) the boson couples to the exchanged meson (pion-in-flight diagram), 2) the boson couples at the vertex between the nucleon and exchanged meson (seagull diagram), 3) the meson exchange occurs with a virtual intermediate nucleon to which the boson couples, 4) as in case 3), but the intermediate particle is a Delta resonance instead of a nucleon. Feynman diagrams of these 4 possibilities are shown in \FigureRef{fig:mec_feynman_diagrams} \cite{Measurement_of_the_Antineutrino_Double-Differential_Charged-Current_Quasi-Elastic_Scattering_Cross_Section_at_MINERvA_book}\cite{Adjusting_neutrino_interaction_models_and_evaluating_uncertainties_using_NOvA_near_detector_data}
 \cite{Seagull_and_pion-in-flight_mec}.
 
 \begin{figure}
