--- a/chap4-Energy_Reco.tex
+++ b/chap4-Energy_Reco.tex
@@ -42,7 +42,7 @@ Once the charge of a hit has been determined, the final steps which involve conv
 where $\frac{dE}{dx}$ is the deposited energy per unit length, $\frac{dQ}{dx}$ is the deposited charge per unit length,  $\mathcal{E}$ is the electric field in the detector, $\rho$ is the density of liquid argon, $W_{ion} = 23.6$ eV which is the energy required to ionise an argon atom, $\alpha = 0.93 \pm 0.02$ and $\beta = 0.212 \pm 0.002$ (kV/cm)(g/cm$^2$)/MeV. The values for parameters $\alpha$ and $\beta$ are results from the \Gls{argoneut} experiment \cite{ArgoNeuT_recombination_paper}. The recombination correction, \textit{R}, is given by $\frac{\frac{dQ}{dx}.W_{ion}}{\frac{dE}{dx}}$.
 
 
-Since the recombination model is $\frac{dE}{dx}$ dependent, an accurate path length, \textit{dx}, is needed which requires 3D reconstruction of the direction. Because a shower is treated as single object, which means the trajectory of constituent components are not tracked, it is therefore not straightforward to directly correct for the recombination effect \cite{MicroBooNE_photon_Ereco_paper}. Two different approaches have been considered and are discussed in the relevant energy reconstruction methods below; 1) Assume a nominal recombination value for all hits and 2) use a lookup curve which relates the collected charge to energy which circumvents the need to evaluate a recombination correction directly because it already gets accounted for in the curve.
+Since the recombination model is $\frac{dE}{dx}$ dependent, an accurate path length, \textit{dx}, is needed which requires 3D reconstruction of the direction. Because a shower is treated as a single object, which means the trajectory of constituent components are not tracked, it is therefore not straightforward to directly correct for the recombination effect \cite{MicroBooNE_photon_Ereco_paper}. Two different approaches have been considered and are discussed in the relevant energy reconstruction methods below: 1) assume a nominal recombination value for all hits and 2) use a lookup curve which relates the collected charge to energy which circumvents the need to evaluate a recombination correction directly because it already gets accounted for in the curve.
 
 In the analysis and validation of the shower reconstruction, a number of \textit{true} and \textit{reconstructed} quantities are considered. Care must be taken that it is clear what each value relates to. For clarity, the following quantities are explicitly described;
 \begin{itemize}
@@ -116,11 +116,11 @@ $\frac{dE}{dx}$ values may be calculated by dividing the energy by the track len
 \newpage
 \section{Shower Energy Reconstruction Performance}
 
-In order to assess the performance of the different reconstruction methods, a comparison with \textit{truth} information is performed. Depending on the approach, a few other inefficiencies should be considered, namely that the hit reconstruction and Pandora pattern recognition are not perfect \cite{Pandora_paper}. This results in hits missing due to not being reconstructed plus the addition of the clusters that Pandora produces being incomplete. Therefore, there are typically fewer hits than there would be if the shower in question were to be perfectly reconstructed. Reconstructing the energy of the showering particle, is desirable for a number of analyses, however, due to these issues, it is not realistic to expect agreement to within a few percent. Improving the hit reconstruction or the pattern recognition within Pandora would clearly help, but it's likely that a non-negligible bias would remain. Work on Pandora, the hit reconstruction and addressing any remaining bias is however beyond the scope of this chapter. To circumvent the inefficiencies in Pandora's pattern recognition, Pandora is run in \textit{cheating} mode, which means that truth information is used to perform the clustering. This decouples the reconstruction methods from any effects due to Pandora's pattern recognition. For comparison, a number of figures showing the reconstruction performance without using Pandora in cheating mode are shown in \AppendixRef{app:reconstruction_performance}.
+In order to assess the performance of the different reconstruction methods, a comparison with \textit{truth} information is performed. Depending on the approach, a few other inefficiencies should be considered, namely that the hit reconstruction and Pandora pattern recognition are not perfect \cite{Pandora_paper}. This results in hits missing due to not being reconstructed plus the addition of the clusters that Pandora produces being incomplete. Therefore, there are typically fewer hits than there would be if the shower in question were to be perfectly reconstructed. Reconstructing the energy of the showering particle, is desirable for a number of analyses, however, due to these issues, it is not realistic to expect agreement to within a few percent. Improving the hit reconstruction or the pattern recognition within Pandora would clearly help, but it is likely that a non-negligible bias would remain. Work on Pandora, the hit reconstruction and addressing any remaining bias is however beyond the scope of this chapter. To circumvent the inefficiencies in Pandora's pattern recognition, Pandora is run in \textit{cheating} mode, which means that truth information is used to perform the clustering. This decouples the reconstruction methods from any effects due to Pandora's pattern recognition. For comparison, a number of figures showing the reconstruction performance without using Pandora in cheating mode are shown in \AppendixRef{app:reconstruction_performance}.
 
 To purely gauge the performance of a given reconstruction method, it is probably best to compare the truth and reconstructed energy of a shower by only considering the available hits. This way, the reconstruction method is only validated from the available information and is additionally decoupled from hit reconstruction inefficiencies. However, additional care must be taken when using the true energy of the hits. What is considered a hit is user defined in that the width that defines a hit is a parameter that may be changed. Therefore, the true energy associated with a hit is dependant on the chosen width. Within \gls{larsoft}, the default width of a hit is $1\sigma$ which is chosen to try and find a balance between covering a sufficient amount of charge whilst still being able to resolve multiple hits which are closely spaced. The hit width considered here has been left at the default value of $1\sigma$. 
 
-Generally the validation is performed on a shower-hit level. This means that for a given shower, the energy of each hit is reconstructed and then summed together to obtain the energy of the shower. The exception to this is in the case of the \textit{Linear Energy tool}. During its development, it was customary to sum up the charge of all the hits and then convert to energy. This is why the calibration curve in \FigureRef{fig:linear lookup curve} has energies on the order of a shower level and not a hit level (individual hit energies are usually $\lesssim 5$ MeV) and also why it's possible to evaluate shower energies above 1000 MeV using the ESTAR method. 
+Generally the validation is performed on a shower-hit level. This means that for a given shower, the energy of each hit is reconstructed and then summed together to obtain the energy of the shower. The exception to this is in the case of the \textit{Linear Energy tool}. During its development, it was customary to sum up the charge of all the hits and then convert to energy. This is why the calibration curve in \FigureRef{fig:linear lookup curve} has energies on the order of a shower level and not a hit level (individual hit energies are usually $\lesssim 5$ MeV) and also why it is possible to evaluate shower energies above 1000 MeV using the ESTAR method. 
 
 \subsection{General Validation of a BNB Sample}
 
@@ -177,10 +177,8 @@ is fitted to each distribution, where \textit{A} is a constant that defines the 
 
 The Gaussian fits to the fractional energy separation distributions of each of the three reconstruction algorithms are shown in \FigureRef{fig:gauss_fit_hit_level} and \FigureRef{fig:gauss_fit_showering_e} for the comparison with the true energy of the hits and the true energy of the showering electron respectively. In order for the resolution comparisons to remain valid, the Gaussian fits in \FigureRef{fig:gauss_fit_showering_e} are produced by considering the same x-axis range size. Additionally, the binning range has been chosen such that the distribution shapes are comparable in order to minimise binning effects on the fit width whilst maintaining the same bin width for each method. The corresponding $\sigma$ values for each of the Gaussian fits is shown in \TableRef{table:gaus_fit_sigma_values}. 
 
-The Gaussian fits in \FigureRef{fig:gauss_fit_hit_level} for the \textit{Shower Linear Energy tool} and the \textit{Shower ESTAR Energy tool} are fairly similar with \textit{Shower Num Electrons Energy tool} having a slightly broader fit. This is likely due to the \textit{Shower Num Electrons Energy tool} using a fixed recombination value which systematically assigns higher energy values to the hits. It should be noted that the Gaussian fits will be influenced by binning artefacts in the distributions which are then mapped to the resolution. 
-
-The Gaussian fits for all three methods have a similar width in \FigureRef{fig:gauss_fit_showering_e}. All methods underestimate the true energy in this case meaning 
-
+The Gaussian fits in \FigureRef{fig:gauss_fit_hit_level} for the \textit{Shower Linear Energy tool} and the \textit{Shower ESTAR Energy tool} are fairly similar with \textit{Shower Num Electrons Energy tool} having a slightly broader fit. This is likely due to the \textit{Shower Num Electrons Energy tool} systematically assigning higher energy values to each of the hits which makes event migration across bins more likely. It should be noted that the Gaussian fits will be influenced by binning artefacts in the distributions which are then mapped to the resolution. 
+The Gaussian fits for all three methods have a similar width in \FigureRef{fig:gauss_fit_showering_e}. The effect from event migration across bins likley to be  reduced due to the larger difference in energy between the sum of the hits and the showering electron. 
 
 
 \begin{figure}[h!]
