--- a/chap6-valor_analysis_2.tex
+++ b/chap6-valor_analysis_2.tex
@@ -364,7 +364,7 @@ Total        & 157.8                & 2.3                  & 770.9              
 
 To assess the impact of the different systematic parameters on the oscillation parameters the following study is performed;
 \begin{enumerate}
-    \item Generate a toy experiment with a given oscillation signal with a single systematic parameter, $f_i$, set to $\pm1\sigma$ from it's nominal value and all other systematic parameters are set to their nominal value.
+    \item Generate a toy experiment with a given oscillation signal with a single systematic parameter, $f_i$, set to $\pm1\sigma$ from its nominal value and all other systematic parameters are set to their nominal value.
     \item Perform a fit on the toy experiment with $f_i$ fixed to its nominal value. Both the oscillation parameters and all the systematic parameters are initially set to their nominal value and are allowed to float with the exception of $f_i$. The other systematic parameters are allowed to float in order to obtain the best possible agreement between the fit and the toy experiment.
     \item Steps 1. and 2. are then repeated for all \textit{i} systematic parameters of interest. Both the +1$\sigma$ and -1$\sigma$ variations should be performed for each systematic parameter since the effect on the oscillation parameters is typically not symmetric.  
 \end{enumerate}
