--- a/chap7-conclusion.tex
+++ b/chap7-conclusion.tex
@@ -1,7 +1,7 @@
 \chapter{Conclusion}
 \label{chap:Conclusion}
 
-\gls{sbn} is expected to provide a rich physics programme, with the main aims being to confirm or refute the possible existence of light sterile neutrinos, investigate neutrino-argon interactions and to develop large scale \gls{lartpc} technologies. Both the \gls{microboone} and \gls{icarus} detectors are currently taking data and the full \gls{sbn} program is expected to come online in early 2024 once \gls{sbnd} is ready to also take data. 
+The three \gls{sbn} detectors are expected to provide a rich physics programme, with the main aims being to confirm or refute the possible existence of light sterile neutrinos, investigate neutrino-argon interactions and to develop large scale \gls{lartpc} technologies. Both the \gls{microboone} and \gls{icarus} detectors are currently taking data and the full \gls{sbn} program is expected to come online in early 2024 once \gls{sbnd} is ready to also take data. 
 
 In this thesis, the development of two new \gls{em} shower reconstruction algorithms have been presented along with the necessary inputs and results from an oscillation analysis within \gls{sbn}. The oscillation analysis focuses on the \nue appearance and disappearance channels and uses a modern set of inputs which better reflect the actual \gls{sbn} program and the relevant physics than what was used in the \gls{sbn} proposal.
 
