--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,8 @@
 
 %% Define the un-numbered front matter (cover pages, rubrik and table of contents)
 \begin{frontmatter}
-  %\input{frontmatter}
+  \input{liverpool_title_page}
+  \input{frontmatter}
 \end{frontmatter}
 
 %% Start the content body of the thesis
